--- a/index.html
+++ b/index.html
@@ -5,11 +5,52 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+
+    <style>
+      @font-face {
+        font-family: 'RobReg';
+        src: url('assets/fonts/Roboto-Regular.ttf');
+      }
+
+      @font-face {
+        font-family: 'RobMed';
+        src: url('assets/fonts/Roboto-Medium.ttf');
+      }
+
+      span {
+        font-family: "RobReg", sans-serif;
+        font-weight: 400;
+      }
+
+      .bx p {
+
+        font-size: 2rem;
+        /* text-shadow: 10px 4px 2px red, 10px 4px 2px blue; */
+        text-decoration: underline black;
+        text-underline-offset: 10px;
+        /* font-size: 20px; */
+        /* text-indent: 50px; */
+        /* text-transform: uppercase; */
+        /* text-align: center; */
+      }
+    </style>
+
   </head>
 
   <body>
 
-    <h1>hello css</h1>
+    <span>Lorem ipsum dolor sit, amet consectetur adipisicing elit. In dolorem at voluptatum soluta voluptate temporibus
+      ipsum ad dicta! Quas, earum ducimus? Quibusdam nihil fuga in totam reiciendis id perferendis ut!</span>
+
+
+    <div class="bx">
+      <p> Lorem Lorem ipsum </p>
+    </div>
+
+
+
+
+
 
   </body>
 
